force-app/main/default/objects/Outreach_Call_Result__mdt/Outreach_Call_Result__mdt.object-meta.xml
<CustomObject>
    <label>Outreach Call Result</label>
    <pluralLabel>Outreach Call Results</pluralLabel>
    <description>Admin-configurable call results for outreach outcome logging (lifecycle, timeline, evidence).</description>
</CustomObject>