force-app/main/default/objects/Outreach_Call_Result__mdt/fields/Closes_Care_Item__c.field-meta.xml
<CustomField>
    <fullName>Closes_Care_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closes Care Item</label>
    <type>Checkbox</type>
</CustomField>