force-app/main/default/objects/Outreach_Call_Result__mdt/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>