force-app/main/default/objects/Outreach_Call_Result__mdt/fields/Evidence_Kind__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Kind__c</fullName>
    <label>Evidence Kind</label>
    <length>40</length>
    <type>Text</type>
</CustomField>