force-app/main/default/objects/Outreach_Call_Result__mdt/fields/Lifecycle__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle__c</fullName>
    <label>Lifecycle</label>
    <length>20</length>
    <type>Text</type>
</CustomField>