force-app/main/default/objects/Outreach_Call_Result__mdt/fields/Requires_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Requires_Evidence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Evidence</label>
    <type>Checkbox</type>
</CustomField>