force-app/main/default/objects/Outreach_Call_Result__mdt/fields/Show_On_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Show_On_Timeline__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show On Timeline</label>
    <type>Checkbox</type>
</CustomField>