force-app/main/default/objects/Outreach_Call_Result__mdt/fields/Snoozes__c.field-meta.xml
<CustomField>
    <fullName>Snoozes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Snoozes</label>
    <type>Checkbox</type>
</CustomField>